# voxel-engine

./: LICENSE  voxel-engine.sln
voxel-engine/: CMakeLists.txt  block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunk_vao_manager.cpp  chunk_vao_manager.h  engine_win32.cpp  engine_win32.h  input.cpp  input.h  map3d.h  msdf_default.frag  renderer.cpp  renderer.h  safe_queue.h  shader.h  stdafx.cpp  stdafx.h  textRenderer.cpp  textRenderer.h  text_renderer.cpp  text_renderer.h  util.cpp  util.h  vbo_arena.cpp  vbo_arena.h  voxel-engine.vcxproj  voxel-engine.vcxproj.filters  world.cpp  world.h  world_gen.cpp  world_gen.h  world_mesher.cpp  world_mesher.h
voxel-engine/client/: input.cpp  input.h  voxel-engine.cpp  window.cpp  window.h
voxel-engine/lib/fastnoise/: FastNoiseSIMD.cpp  FastNoiseSIMD.h  FastNoiseSIMD_internal.cpp  FastNoiseSIMD_neon.cpp  FastNoiseSIMD_sse41.cpp
voxel-engine/lib/glad/include/glad/: glad.h
voxel-engine/lib/glad/src/: glad.c
voxel-engine/lib/glfw/lib/: glfw3.lib
voxel-engine/lib/msdfgen/backup/core/: Shape.h  SignedDistance.h
voxel-engine/lib/msdfgen/backup/ext/: import-font.cpp  import-font.h
voxel-engine/lib/msdfgen/core/: Bitmap.h
voxel-engine/lib/msdfgen/ext/: import-font.cpp
voxel-engine/resource/: resource_manager.cpp  resource_manager.h
voxel-engine/shaders/: default.frag  default.vert  msdf_default.frag  sky.frag  sky.vert
voxel-engine/tests/: events.c
